<resources>
    <string name="app_name">lab5</string>
    <string name="firstNameHint">Enter your first name</string>
    <string name="lastNameHint">Enter your last name</string>
    <string name="emailHint">Enter your email</string>
    <string name="idHint">Enter your ID</string>
    <string name="addressHint">Enter your address</string>
    <string name="idLabel">ID</string>
    <string name="firstNameLabel">First name</string>
    <string name="lastNameLabel">Last name</string>
    <string name="emailLabel">Email</string>
    <string name="addressLabel">Address</string>
    <string name="btnAdd">Add</string>
    <string name="btnRead">Read</string>
    <string name="btnClear">Clear</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="btnConfirm">Confirm</string>
    <string name="deleteLabel">Enter ID of account you want to delete</string>
    <string name="updateLabel">Enter the account ID and fill in only those fields that you want to update</string>
    <string name="readLabel">Enter ID of account you want to read</string>
    <string name="addLabel">Photo is optional field</string>
    <string name="dbInfo">Database information</string>
    <string name="btnSort">Sort</string>
    <string name="orderlabel">ORDER BY</string>
    <string name="radioName">First Name</string>
    <string name="radioSurName">Last Name</string>
    <string name="radioEmail">Email</string>
    <string name="btnLoad">Load photo</string>
    <string name="btnReadOne">Read One</string>
    <string name="onClear">Table was cleared</string>
</resources>