<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editID"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_light_background"
        android:backgroundTint="#2196F3"
        android:hint="@string/idHint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardview_light_background"
        android:backgroundTint="#2196F3"
        android:hint="@string/firstNameHint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editID" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardview_light_background"
        android:backgroundTint="#2196F3"
        android:hint="@string/lastNameHint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="196dp"
        android:background="@color/cardview_light_background"
        android:backgroundTint="#2196F3"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardview_light_background"
        android:backgroundTint="#2196F3"
        android:hint="@string/addressHint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="92dp"
        android:text="@string/firstNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="152dp"
        android:text="@string/lastNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:text="@string/idLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="215dp"
        android:text="@string/emailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="270dp"
        android:text="@string/addressLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="92dp"
        android:text="@string/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="92dp"
        android:text="@string/btnRead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="92dp"
        android:text="@string/btnClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <EditText
        android:id="@+id/dbInfo"
        android:layout_width="312dp"
        android:layout_height="250dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="84dp"
        android:background="#2196F3"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="hi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btnUpdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btnDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
